fix gap

--- a/web/src/styles/elements/_form.scss
+++ b/web/src/styles/elements/_form.scss
@@ -555,6 +555,7 @@ width: 100%;
   margin: 0 0 $margin-xxsmall $margin-small;
   font-size: $font-size-small;
   display: flex;
+  gap: $padding-small;
   flex-direction: row;
 
   &:hover {
